--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
   --white: #fff;
   --fuchsia: #f9008e;
   --green: #2bfd86;
-
 }
 *,
 *::after,
@@ -19,23 +18,23 @@ body {
   height: 100vh;
   align-items: center;
 }
-h1{
+h1 {
   font-family: "Secular One", sans-serif;
   font-weight: bold;
   font-size: 4rem;
 }
-h2{
+h2 {
   font-family: "Secular One", sans-serif;
   color: var(--white);
   font-size: 2rem;
   font-weight: lighter;
 }
-span{
+span {
   font-weight: lighter;
   font-size: 3rem;
 }
 
-p{
+p {
   font-family: "Secular One", sans-serif;
   font-size: 20px;
 }
@@ -45,7 +44,7 @@ p{
   margin-top: 25px;
   flex-direction: column;
 }
-img{
+img {
   width: 130px;
   height: 130px;
 }
@@ -69,31 +68,28 @@ form {
 }
 
 input {
-	display: block;
-	font-weight: 700;
-	padding: 10px;
-	cursor: pointer;
+  display: block;
+  font-weight: 700;
+  padding: 10px;
+  cursor: pointer;
   border-radius: 20px;
   font-size: 1.5rem;
 }
-label{
+label {
   color: var(--white);
   font-size: 1rem;
   align-items: center;
   font-family: "Secular One", sans-serif;
-
 }
 
-form > div {
+.login > div  {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 1rem;
   align-items: baseline;
 }
-
-form> div > label {
-
+label {
   margin: 1rem auto;
   color: var(--white);
   font-family: "Secular One", sans-serif;
@@ -122,12 +118,12 @@ form> div > label {
   border: none;
   color: #fff;
   padding: 7px 10px;
-  margin: .5rem;
+  margin: 0.5rem;
   border-radius: 5px;
   cursor: pointer;
   font: bold 1vw sans-serif;
 }
-#btn-add:hover{
+#btn-add:hover {
   color: var(--fuchsia);
   background-color: white;
   border: none;
@@ -137,17 +133,28 @@ form> div > label {
   background-color: var(--fuchsia);
   border: none;
   color: #fff;
-  margin-left: .4rem;
-  padding: .6vw .5rem;
+  margin-left: 0.4rem;
+  padding: 0.6vw 0.5rem;
   border-radius: 3px;
   cursor: pointer;
   font: bold 1vw sans-serif;
 }
-#btn-ver:hover{
+#btn-ver:hover {
   color: var(--fuchsia);
   background-color: white;
   border: none;
 }
 .input-error {
   border: 1px solid #ff0000;
+}
+
+.alerta {
+  padding: 0.5rem;
+  text-align: center;
+  color: var(--white);
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 1rem 0;
+  background-color: red;
+  border-radius: 20px;
 }
