--- a/css/style.css
+++ b/css/style.css
@@ -158,3 +158,14 @@ label {
   background-color: red;
   border-radius: 20px;
 }
+@media screen and (max-width: 1000px) {
+  .login > div  {
+    display: grid;
+    grid-template-columns: 1fr;
+
+    padding: 1rem;
+  }
+}
+a {
+  text-decoration: none;
+}
