--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,12 @@ label {
   font-family: "Secular One", sans-serif;
 }
 
-.login > div  {
+.login > div {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 1rem;
-  align-items:center
+  align-items: center;
 }
 label {
   margin: 1rem auto;
@@ -128,21 +128,7 @@ label {
   border: none;
 }
 
-#btn-ver {
-  background-color: var(--fuchsia);
-  border: none;
-  color: #fff;
-  margin-left: 0.4rem;
-  padding: 0.6vw 0.5rem;
-  border-radius: 3px;
-  cursor: pointer;
-  font: bold 1vw sans-serif;
-}
-#btn-ver:hover {
-  color: var(--fuchsia);
-  background-color: white;
-  border: none;
-}
+
 .input-error {
   border: 1px solid #ff0000;
 }
@@ -158,7 +144,7 @@ label {
   border-radius: 20px;
 }
 @media screen and (max-width: 1000px) {
-  .login > div  {
+  .login > div {
     display: grid;
     grid-template-columns: 1fr;
     padding: 1rem;
@@ -166,6 +152,7 @@ label {
   form {
     margin: 3% auto;
     width: 90%;
+  }
 }
 a {
   text-decoration: none;
